# text

./: .bazelrc  .gitignore  .travis.yml  CODEOWNERS  README.md  README.☆  WORKSPACE  build.err  build_pip_package.py  cloudbuild.yaml  setup.nightly.py  setup.py
.github/workflows/: dev_m-dash.yml
Project104/: .env.example
Project104/config/: app.php
Project104/routes/: web.php
docs/: _book.yaml  api_overview.md  index.md
docs/guide/: BUILD  End_to_end_text_preprocessing_in_TF.ipynb  _toc.yaml  bert_preprocessing_guide.ipynb  decoding_api.ipynb  index.md  subwords_tokenizer.ipynb  text_tf_lite.ipynb  tf_text_intro.md  tokenizers.ipynb  unicode.ipynb  (+2 more)
examples/: METADATA  OWNERS  intro.ipynb  subwords_tokenizer.ipynb  tokenizers.ipynb
oss_scripts/: .travis.yml  BUILD  build_docs.py  build_test.sh  configure.sh  docker_builds.sh  install_bazel.sh  mac_test.sh  prepare_tf_dep.sh  presubmit.sh  presubmit_docker_test.sh  release_check.sh  run_build.sh  run_tests.sh  test.sh  test_mac.sh  test_presubmit_mac.sh
oss_scripts/pip_package/: BUILD  BUILD.example  MANIFEST.in  build_pip_package.py  build_pip_package.sh  build_wheel.py  pyproject.toml  requirements.in  requirements_lock_3_10.txt  requirements_lock_3_11.txt  requirements_lock_3_12.txt  requirements_lock_3_13.txt  requirements_lock_3_9.txt  setup.nightly.py  setup.py  tensorflow_build_info.py  tensorflow_text_python_wheel.bzl  wheel.bzl
tensorflow_text/: BUILD  OWNERS_METADATA  __init__.py  presubmit.sh  public_names_test.py  py_deps_profile.bzl  tftext.bzl  version_script.lds  workspace.bzl
(+570 files in other folders)
